--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="complete_name">Nome completo</string>
     <string name="add_user_title">Cadastrar usuário</string>
     <string name="confirmar_devolucao">Confirmar devolução</string>
+    <string name="quiz_title">Questionário</string>
 </resources>
