--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,17 @@
     <string name="withdraw_select_bike_title">Retirada de bicicleta</string>
     <string name="withdraw_confirm">Confirmar</string>
     <string name="withdraw_confirm_title">Confirmar retirada?</string>
+    <string name="withdrawal_quiz_destiny_hint">Qual foi o bairro de destino?</string>
+    <string name="confirm">Confirmar</string>
+    <string name="withdrawal_quiz_trip_reason">Motivo de uso</string>
+    <string name="trip_reason_shopping">Fazer compras</string>
+    <string name="trip_reason_leisure">Pedalar por lazer</string>
+    <string name="trip_reason">Ir ao trabalho</string>
+    <string name="trip_reason_bicycle_as_work">Ferramenta de trabalho</string>
+    <string name="trip_reason_other">Outro</string>
+    <string name="withdrawal_bicycle_rating_great">Ótima</string>
+    <string name="withdrawal_bicycle_rating_good">Boa</string>
+    <string name="withdrawal_bicycle_rating_regular">Regular</string>
+    <string name="withdrawal_bicycle_rating_bad">Ruim</string>
+    <string name="withdrawal_bicycle_rating_question">Qual nota você da para a bicicleta?</string>
 </resources>
