--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="login_error">Falha no login</string>
     <string name="add_community">Adicionar comunidade</string>
     <string name="login_no_communities_allowed">Solicite acesso a Ameciclo</string>
+    <string name="login_load_communities_error">Erro ao obter comunidades</string>
+    <string name="login_retry_load_community">Tentar novamente</string>
     <string name="add_community_error">Não foi possível cadastrar a comunidade</string>
     <string name="login_confirm_email_error">Confirme seu cadastro no email</string>
     <string name="resend_email">Reenviar email</string>
