add missing error strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,7 @@
     <string name="action_save">Salvar</string>
     <string name="action_forgotten_password">Problemas com login?</string>
     <string name="prompt_password_recovery_header">Veja como redefinir sua senha nas instruções enviadas para este e-mail.</string>
+    <string name="invalid_email">E-mail inválido</string>
+    <string name="network_error_message">Falha ao se conectar com o servidor, tente novamente.</string>
 
 </resources>
