--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="submit_form_error">Não foi possível executar a ação.</string>
     <string name="sign_in_password_error">Senha incorreta.</string>
     <string name="bicycle_serie_number_invalid">Número da bicicleta inválido</string>
+    <string name="btn_register_bicycle">Cadastrar Bicicleta</string>
+    <string name="add_bicycle_title">Cadastrar Bicicleta</string>
 </resources>
