--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="bicycle_serie_number_invalid">Número da bicicleta inválido</string>
     <string name="btn_register_bicycle">Cadastrar Bicicleta</string>
     <string name="add_bicycle_title">Cadastrar Bicicleta</string>
+    <string name="edit_bicycle_title">Editar Bicicleta</string>
 </resources>
