--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="trip_reason_to_work">Ir ao trabalho</string>
     <string name="trip_reason_bicycle_as_work">Ferramenta de trabalho</string>
     <string name="trip_reason_other">Outro</string>
+    <string name="trip_count_label" formatted="true">Total: %s1 viagens</string>
     <string name="withdrawal_bicycle_rating_great">Ótima</string>
     <string name="withdrawal_bicycle_rating_good">Boa</string>
     <string name="withdrawal_bicycle_rating_regular">Regular</string>
