--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,18 +103,21 @@
     <string name="reset_password_email_sent">Email de recuperação de senha enviado.</string>
     <string name="reset_password_email_sent_error">Falha ao enviar email, tente novamente.</string>
 
-    <!-- ADD USER -->
+    <!-- USER -->
     <string name="add_user_invalid_name">Nome inválido</string>
     <string name="add_user_invalid_address">Endereço inválido</string>
     <string name="add_user_address_hint">Endereço (Rua, número)</string>
     <string name="add_user_cpf_hint">Número do RG ou CPF</string>
     <string name="add_user_invalid_cpf">CPF inválido</string>
-    <string name="btn_add_user">Adicionar pessoa</string>
+    <string name="btn_add_user">Adicionar usuário</string>
+    <string name="btn_edit_user">Editar usuário</string>
     <string name="rb_male_option">Masculino</string>
     <string name="rb_female_option">Feminino</string>
     <string name="rb_other_option">Outro</string>
     <string name="rb_no_answer_option">Prefere não responder</string>
     <string name="txt_doc_image_front">Frente</string>
     <string name="txt_doc_image_back">Verso</string>
+    <string name="add_user_toolbar_title">Cadastrar Usuário</string>
+    <string name="edit_user_toolbar_title">Editar Usuário</string>
 
 </resources>
