Create BikeRequest and change the logic to getBikes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,8 @@
     <string name="add_photo">Adicionar foto</string>
     <string name="btn_register_bicycle">Cadastrar Bicicleta</string>
     <string name="add_bicycle_title">Cadastrar Bicicleta</string>
+    <string name="bike_withdraw_date">Data de empréstimo: %s</string>
+    <string name="bike_devolution_date">Data de devolução: %s</string>
 
     <!-- USER -->
     <string name="user_created_since">Cadastrado desde %s</string>
