--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,6 +166,8 @@
     <string name="repeat_devolution_title">Devolver outra</string>
     <string name="wait_in_build">O histórico de atividades está em construção. Aguarde mais um pouco e logo estará disponível :)</string>
 
+    <!-- User Form -->
+    <string name="user_form_step_label">Preencha os dados</string>
 
     <!-- User Quiz -->
     <string name="user_quiz_means_transport_question">Você tem acesso a outro meio de transporte?</string>
