--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,10 +174,13 @@
     <string name="user_quiz_which_question">Qual?</string>
     <string name="user_quiz_already_bicycle_user_question">Já utilizava a bicicleta antes do Bota Pra Rodar?</string>
     <string name="user_quiz_how_much_time_question">Há quanto tempo?</string>
-    <string name="user_quiz_motivation_question">Qual sua motivação para utilizar a bicicleta como meio de transporte?</string>
+    <string name="user_quiz_motivation_question_label">Qual sua motivação para utilizar a bicicleta como meio de transporte?</string>
+    <string name="user_quiz_motivation_question">Motivação</string>
     <string name="user_quiz_accident_victim_question">Já foi vítima de colisão/atropelamento?</string>
-    <string name="user_quiz_problems_on_way_question">Quais os problemas que você mais percebe durante o seu trajeto?</string>
-    <string name="user_quiz_time_on_way_question">Quanto tempo você leva no trajeto mais frequente/comum que realiza de bicicleta?</string>
+    <string name="user_quiz_problems_on_way_question_label">Quais os problemas que você mais percebe durante o seu trajeto?</string>
+    <string name="user_quiz_problems_on_way_question">Problemas</string>
+    <string name="user_quiz_time_on_way_question_label">Quanto tempo você leva no trajeto mais frequente/comum que realiza de bicicleta?</string>
+    <string name="user_quiz_time_on_way_question">Tempo</string>
 
 
 </resources>
