--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,21 +116,31 @@
     <string name="user_created_since">Cadastrado desde %s</string>
     <string name="add_user_invalid_name">Nome inválido</string>
     <string name="add_user_invalid_address">Endereço inválido</string>
+    <string name="add_user_age">Idade</string>
     <string name="add_user_invalid_age">Idade inválida</string>
+    <string name="add_user_income">Renda mensal</string>
     <string name="add_user_invalid_income">Renda inválida</string>
+    <string name="add_user_racial">Com qual raça a pessoa se identifica?</string>
     <string name="add_user_invalid_racial">Raça inválida</string>
+    <string name="add_user_schooling">Qual o grau de escolaridade?</string>
     <string name="add_user_invalid_schooling">Escolaridade inválida</string>
     <string name="add_user_address_hint">Endereço (Rua, número)</string>
     <string name="add_user_cpf_hint">Número do RG ou CPF</string>
     <string name="add_user_invalid_cpf">CPF inválido</string>
+    <string name="add_user_telephone_hint">Telefone</string>
+    <string name="add_user_invalid_telephone">Telefone inválido</string>
     <string name="btn_add_user">Adicionar usuário</string>
     <string name="btn_edit_user">Editar usuário</string>
+    <string name="add_user_gender">Qual gênero a pessoa se identifica?</string>
     <string name="rb_male_option">Masculino</string>
     <string name="rb_female_option">Feminino</string>
     <string name="rb_other_option">Outro</string>
     <string name="rb_no_answer_option">Prefere não responder</string>
+    <string name="txt_doc_address">Comprovante de residência</string>
     <string name="txt_doc_image_front">Frente</string>
+    <string name="txt_doc_front">Frente do documento</string>
     <string name="txt_doc_image_back">Verso</string>
+    <string name="txt_doc_back">Verso do documento</string>
     <string name="add_user_toolbar_title">Cadastrar Usuário</string>
     <string name="edit_user_toolbar_title">Editar Usuário</string>
     <string name="user_update_success">Usuário atualizado com sucesso</string>
