--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="reset_password_email_sent_error">Falha ao enviar email, tente novamente.</string>
 
     <!-- Bike -->
+    <string name="title_bikes">Bicicletas</string>
     <string name="bike_order_with_label">Ordem: %s</string>
     <string name="bike_series_with_label">Série: %s</string>
     <string name="add_photo">Adicionar foto</string>
@@ -230,5 +231,9 @@
     <string name="select_community">Selecione a comunidade</string>
     <string name="community_description">Descrição: %s</string>
     <string name="community_address">Endereço: %s</string>
+
+    <!-- Users Fragment -->
+    <string name="title_users">Usuários</string>
+    <string name="btn_register_user">Cadastrar novo usuário</string>
 
 </resources>
