Fix: Add test to verify camera opening view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,4 +237,7 @@
     <string name="title_users">Usuários</string>
     <string name="btn_register_user">Cadastrar novo usuário</string>
 
+    <!-- Camera confirmation dialog-->
+    <string name="camera_dialog_positive_button_text">Tirar foto!</string>
+
 </resources>
