--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,8 @@
     <string name="profile_picture_tip">Tire uma foto dos ombros para cima, estilo 3x4, procure locais claros, se aproxime da pessoa e verifique se é possível identificá-la depois.
     </string>
 
-    <string name="bicycle_serial_number_invalid">Número de série da bicileta inválido ou já cadastrado na comunidade</string>
+    <string name="bicycle_serial_number_invalid">Número de série da bicicleta inválido</string>
+    <string name="bicycle_serial_number_already_registered">Número de série da bicicleta já cadastrado na comunidade</string>
     <string name="bicycle_name_invalid">Nome da bicicleta inválido</string>
     <string name="bike_serial_number">Número de série da bicicleta</string>
     <string name="bike_name">Nome da bicicleta</string>
